# ros-rcll_btr_msgs

./: CMakeLists.txt  README.md  package.xml  refbox-view3.rvw2  refbox.rvw2  ros.rvw2  ros_robotino2.rvw2
msg/: PictureInfoResponse.msg  TagInfoResponse.msg  TagLocationResponse.msg
scripts/: btr_rplidar.py  positionDriver.py  refbox-view3.py  refbox.py  robotino.py  robview.sh  robview2.sh  rosRcllRefBox.sh  rosRcllRefBoxNetwork.sh  sin02.py  udpcomm.py
srv/: PictureInfo.srv  SetDistance.srv  SetPosition.srv  TagInfo.srv  TagLocation.srv
