<?xml version="1.0"?>
<package>
  <name>rcll_btr_msgs</name>
  <version>0.1.0</version>
  <description>Message definitions for Robotino using ROS</description>

  <author>Wataru UEMURA</author>
  <maintainer email="wataru@rins.ryukoku.ac.jp">Wataru UEMURA</maintainer>

  <license>BSD</license>


  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://vega.elec.ryukoku.ac.jp/trac/wiki/BabyTigers-R</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
